# net-analysis

./: .bazelrc  .gitignore  BUILD.bazel  CONTRIBUTING.md  MANIFEST.in  Pipfile  README.md  WORKSPACE  development.md  pipenv.sh  py_dev_requirements.txt  python_env.md  setup.py  setup_python.sh
jigsaw_net_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
netanalysis/analysis/: BUILD  Domain Analysis.ipynb  DomainAnalysis.ipynb  analysis_app.py  analyze_dns.md  analyze_domain.py  ip_info.py  ip_info_widget.py  simple_autonomous_system.py  simple_autonomous_system_test.py
netanalysis/autonomous_system/: model.py  simple_autonomous_system.py  simple_autonomous_system_test.py
netanalysis/blocktest/: README.md  measure.sh
netanalysis/dns/: classifier.py  domain_ip_validator.py  graph.py  ip_validator.py  model.py  serialization.py
netanalysis/google/: BUILD  get_google_dns_locations.sh  google_dns_test.py
netanalysis/infrastructure/: BUILD  resources.py
netanalysis/ip/: info.py  ip_info.py  ip_info_test.py  model.py  simple_autonomous_system.py  simple_autonomous_system_test.py  test_ip_info.py  test_simple_autonomous_system.py
netanalysis/model/: BUILD
netanalysis/ooni/: BUILD  README.md  bucket.py  fetch_measurements.py  list_ooni_files.py  measurement.py  measurements_to_dns_records.py  ooni_client.py  test_measurement.py
netanalysis/tls/: domain_ip_validator.py
netanalysis/traffic/: README.md  api_repository.py  fetch_google_traffic.py  model.py  (+1 more)
tools/: BUILD  fix_runfiles.sh  format_all_python.sh  ipython.py  jupyter.py
(+27 files in other folders)
