package(default_visibility = ["//visibility:public"])

py_runtime(
    name = "python-3.6",
    files = glob([".venv/**"], exclude=["**/* *"]),
    interpreter = ".venv/bin/python",
)

# Use legacy_create_init = False
# https://github.com/bazelbuild/bazel/commit/0f9c6ea574918dda094cf5423fa3822112846c30#diff-1c01f53c833cb4bc061ef44d2f50ee4a